ADSR parameter UI hooked up.

--- a/SynthFramework/Base.lproj/MainInterface.storyboard
+++ b/SynthFramework/Base.lproj/MainInterface.storyboard
@@ -81,7 +81,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QGg-UQ-iB7">
                                 <rect key="frame" x="20" y="289" width="395" height="157"/>
                                 <connections>
-                                    <segue destination="O1O-ev-ww4" kind="embed" id="o5o-RY-oda"/>
+                                    <segue destination="O1O-ev-ww4" kind="embed" identifier="EnvVC" id="o5o-RY-oda"/>
                                 </connections>
                             </containerView>
                         </subviews>
